--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="">Features</a></li>
+                        <li><a href="">Features</a> </li>
                         <li><a href="">Templates</a></li>
                         <li><a href="">Pricing</a></li>
                         <li><a href="">Support</a></li>
@@ -38,11 +38,30 @@
                         <a href="">Sign Up</a>
                     </div>
                 </div>
-
-
-
-            </nav>
+            </nav>    
         </header>
+        <div class="para">
+            <h1>
+                Creat Your Own Website
+            </h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, distinctio nihil, dicta illo magna0m 
+            </p>
+        </div>
+        <button class="btn">Start Your Journey :-</button>
+
+        <div class="image">
+            <div class="img1">
+                <img src="/images/image1.jpg" alt="" id="img1">
+              
+            </div>
+            <div class="img2">
+                <img src="images/images2.jpg" alt="" id="img2">
+            </div>
+        </div>
+
+        <footer class="flex-all-center">
+            <p>Copyright &copy; PCart.com</p>
+        </footer>
     </div>
 </body>
 
